<resources>
    <string name="app_name">ShopAppTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="applelogin">You logged in via your Apple account</string>
    <string name="googlelogin">You logged in via your Google account</string>
    <string name="emptyfields">Empty name field(s)</string>
    <string name="incorrectemail">Incorrect e-mail</string>
    <string name="logout">Your account has been deleted</string>
    <string name="sign">Your account is created</string>
    <string name="noaccount">Account with this name doesn\'t exist</string>
    <string name="alreadyexists">Account with same name is already exists</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="developer">Artem Bezuglyi</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="_1593">$ 1593</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="e_mail">E-mail</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="games">Games</string>
    <string name="play_station_5_console">Play Station 5 console</string>
    <string name="_90_000">$ 90,000</string>
    <string name="by">by</string>
    <string name="trade">Trade</string>
    <string name="bata">bata</string>
    <string name="location">location</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="brands">Brands</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="you_don_t_have_favorite_goods">You don\'t have favorite goods</string>
    <string name="your_chat_is_empty">Your chat is empty</string>
    <string name="no_goods_in_your_cart">No goods in your cart</string>
    <string name="_20_off">20% off</string>
    <string name="new_balance_sneakers">New balance sneakers</string>
    <string name="_22_50">$ 22,50</string>
</resources>