<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEEEEEE"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context=".screens.SignInFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/sign"
        android:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toTopOf="@id/firstnamesign"
        android:layout_marginBottom="70dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/firstnamesign"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/shape"
        android:hint="@string/first_name"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/montserrat"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/lastname"
        android:layout_marginBottom="40dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/shape"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/last_name"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/shape"
        android:hint="@string/e_mail"
        android:textSize="16sp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/montserrat"
        android:id="@+id/email"
        app:layout_constraintBottom_toTopOf="@id/btnsignin"
        android:layout_marginBottom="40dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:layout_marginTop="10dp"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/btnsignin"
        android:id="@+id/ahaa"
        android:fontFamily="@font/montserrat"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/purple_500"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnsignin"
        android:id="@+id/btnlogin"
        android:fontFamily="@font/montserrat"
        app:layout_constraintStart_toEndOf="@id/ahaa"
        />

    <ImageView
        app:layout_constraintStart_toStartOf="@id/ahaa"
        app:layout_constraintEnd_toEndOf="@id/ahaa"
        app:layout_constraintTop_toBottomOf="@id/ahaa"
        android:layout_marginTop="50dp"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/gooogle"
        android:id="@+id/googleicon"
        />

    <ImageView
        android:id="@+id/appleicon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/apple"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/googleicon"
        app:layout_constraintTop_toBottomOf="@id/googleicon"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_google"
        android:id="@+id/sigingoogle"
        android:textColor="@color/grey"
        app:layout_constraintTop_toTopOf="@id/googleicon"
        app:layout_constraintBottom_toBottomOf="@id/googleicon"
        app:layout_constraintStart_toEndOf="@id/googleicon"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_apple"
        android:fontFamily="@font/montserrat"
        android:id="@+id/siginapple"
        android:textColor="@color/grey"
        app:layout_constraintTop_toTopOf="@id/appleicon"
        app:layout_constraintBottom_toBottomOf="@id/appleicon"
        app:layout_constraintStart_toStartOf="@id/sigingoogle"

        />

</androidx.constraintlayout.widget.ConstraintLayout>