<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/easy"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    tools:context=".screens.LogInFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/log"
        android:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toTopOf="@id/firstnamelog"
        android:layout_marginBottom="70dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/firstnamelog"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/shape"
        android:hint="@string/first_name"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/montserrat"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/password"
        android:layout_marginBottom="40dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/shape"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/password"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/eye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_visibility_off_24"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintTop_toTopOf="@id/password"
        app:layout_constraintBottom_toBottomOf="@id/password"
        android:layout_marginEnd="10dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/shape"
        android:hint="@string/e_mail"
        android:gravity="center_horizontal|center_vertical"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/montserrat"
        android:id="@+id/none"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/btnlogin"
        android:layout_marginBottom="40dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>