<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/easy"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/btnback"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/baseline_arrow_back_24"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/profile"
        android:fontFamily="@font/montserrat"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/photo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:padding="1dp"
        tools:src="@tools:sample/avatars"
        android:src="@drawable/portfolio"
        android:scaleType="fitCenter"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:strokeColor="@color/light"
        app:strokeWidth="2dp"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_photo"
        android:textSize="12sp"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo"
        android:id="@+id/changephoto"
        android:fontFamily="@font/montserrat"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/name"
        android:fontFamily="@font/montserrat"
        app:layout_constraintTop_toBottomOf="@id/changephoto"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnuploaditem"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/upload_item"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        />

    <ImageView
        android:id="@+id/uploadicon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/baseline_upload_24_2"
        android:foregroundGravity="center"
        app:layout_constraintTop_toTopOf="@id/btnuploaditem"
        app:layout_constraintBottom_toBottomOf="@id/btnuploaditem"
        app:layout_constraintStart_toStartOf="@id/string1text"
        android:layout_marginStart="10dp"
        android:elevation="2dp"
        />

    <ImageView
        android:id="@+id/string1icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/baseline_credit_card_24"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="@id/btnuploaditem"
        app:layout_constraintEnd_toStartOf="@id/btnuploaditem"
        android:background="@drawable/shape2"
        app:layout_constraintTop_toBottomOf="@id/btnuploaditem"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trade_store"
        android:id="@+id/string1text"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/string1icon"
        app:layout_constraintBottom_toBottomOf="@id/string1icon"
        app:layout_constraintStart_toEndOf="@id/string1icon"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        />

    <ImageView
        android:id="@+id/string1dop"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/baseline_arrow_forward_ios_24"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="@id/btnuploaditem"
        app:layout_constraintTop_toTopOf="@id/string1icon"
        app:layout_constraintBottom_toBottomOf="@id/string1icon"
        />

    <ImageView
        android:id="@+id/string2icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/baseline_credit_card_24"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="@id/btnuploaditem"
        app:layout_constraintEnd_toStartOf="@id/btnuploaditem"
        android:background="@drawable/shape2"
        app:layout_constraintTop_toBottomOf="@id/string1icon"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:id="@+id/string2text"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/string2icon"
        app:layout_constraintBottom_toBottomOf="@id/string2icon"
        app:layout_constraintStart_toEndOf="@id/string2icon"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        />

    <ImageView
        android:id="@+id/string2dop"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/baseline_arrow_forward_ios_24"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="@id/btnuploaditem"
        app:layout_constraintTop_toTopOf="@id/string2icon"
        app:layout_constraintBottom_toBottomOf="@id/string2icon"
        />

    <ImageView
        android:id="@+id/string3icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/baseline_credit_card_24"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="@id/btnuploaditem"
        app:layout_constraintEnd_toStartOf="@id/btnuploaditem"
        android:background="@drawable/shape2"
        app:layout_constraintTop_toBottomOf="@id/string2icon"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:id="@+id/string3text"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/string3icon"
        app:layout_constraintBottom_toBottomOf="@id/string3icon"
        app:layout_constraintStart_toEndOf="@id/string3icon"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        />

    <ImageView
        android:id="@+id/string4icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/baseline_credit_card_24"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="@id/btnuploaditem"
        app:layout_constraintEnd_toStartOf="@id/btnuploaditem"
        android:background="@drawable/shape2"
        app:layout_constraintTop_toBottomOf="@id/string3icon"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trade_history"
        android:id="@+id/string4text"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/string4icon"
        app:layout_constraintBottom_toBottomOf="@id/string4icon"
        app:layout_constraintStart_toEndOf="@id/string4icon"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1593"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:id="@+id/string3dop"
        app:layout_constraintEnd_toEndOf="@id/btnuploaditem"
        app:layout_constraintTop_toTopOf="@id/string3icon"
        app:layout_constraintBottom_toBottomOf="@id/string3icon"
        />

    <ImageView
        android:id="@+id/string4dop"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/baseline_arrow_forward_ios_24"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="@id/btnuploaditem"
        app:layout_constraintTop_toTopOf="@id/string4icon"
        app:layout_constraintBottom_toBottomOf="@id/string4icon"
        />

    <ImageView
        android:id="@+id/string5icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/baseline_autorenew_24"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="@id/btnuploaditem"
        app:layout_constraintEnd_toStartOf="@id/btnuploaditem"
        android:background="@drawable/shape2"
        app:layout_constraintTop_toBottomOf="@id/string4icon"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore_purchase"
        android:id="@+id/string5text"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/string5icon"
        app:layout_constraintBottom_toBottomOf="@id/string5icon"
        app:layout_constraintStart_toEndOf="@id/string5icon"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        />

    <ImageView
        android:id="@+id/string5dop"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/baseline_arrow_forward_ios_24"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="@id/btnuploaditem"
        app:layout_constraintTop_toTopOf="@id/string5icon"
        app:layout_constraintBottom_toBottomOf="@id/string5icon"
        />

    <ImageView
        android:id="@+id/string6icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/baseline_help_outline_24"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="@id/btnuploaditem"
        app:layout_constraintEnd_toStartOf="@id/btnuploaditem"
        android:background="@drawable/shape2"
        app:layout_constraintTop_toBottomOf="@id/string5icon"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:id="@+id/string6text"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/string6icon"
        app:layout_constraintBottom_toBottomOf="@id/string6icon"
        app:layout_constraintStart_toEndOf="@id/string6icon"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        />

    <ImageView
        android:id="@+id/string7icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/baseline_login_24"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="@id/btnuploaditem"
        app:layout_constraintEnd_toStartOf="@id/btnuploaditem"
        android:background="@drawable/shape2"
        app:layout_constraintTop_toBottomOf="@id/string6icon"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:id="@+id/string7text"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/string7icon"
        app:layout_constraintBottom_toBottomOf="@id/string7icon"
        app:layout_constraintStart_toEndOf="@id/string7icon"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>